# temporal-task-orchestrator

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  models.py  package-lock.json  package.json  pyproject.toml  run.py  starter.py  tailwind.config.js  worker.py
core/: models.py
core/cli/: __main__.py  main.py
core/migrations/: env.py
core/migrations/versions/: 001_add_users_groups_sessions.py
core/tasks/: __init__.py  base.py  registry.py
core/workflows/: __init__.py  base.py  registry.py
docker/: init-taskapp-db.sh
human_tasks/: __init__.py  base.py  registry.py
human_tasks/tasks/: approval.py  approval_input.py  onboarding.py  onboarding_input.py
tasks/: __init__.py  approval.py  approval_input.py  hiring_input.py  onboarding.py  onboarding_input.py  testing_input.py
ui/: app.py  config.py  dependencies.py  helpers.py  main.py  models.py
ui/auth/: csrf.py  database.py  dependencies.py  models.py  routes.py  seed.py  session.py
ui/routers/: admin.py  task_list.py  tasks.py  tasks_page.py  workflow_detail.py  workflows.py  workflows_list.py  ws.py
ui/services/: temporal.py
ui/src/: input.css  json-viewer.ts  loader.ts  task-list.ts  theme.ts  wizard.ts
ui/templates/: admin.html  admin_groups.html  admin_users.html  base.html  login.html  rerun_workflow.html  start_picker.html  start_workflow.html  task_form.html  task_list.html  tasks_page.html  workflow_detail.html  workflows_page.html
worker/: main.py
workflows/: __init__.py  approval.py  base.py  hiring.py  onboarding.py  registry.py  testing.py
(+10 files in other folders)
