[tool.poetry]
name = "temporal-task-orchestrator"
version = "0.1.0"
description = "Temporal Hello World"
authors = ["t"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
temporalio = "^1.25.0"
fastapi = "^0.115.0"
uvicorn = {version = "^0.34.0", extras = ["standard"]}
jinja2 = "^3.1.0"
wtforms = "^3.2.0"
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
