[tool.poetry]
name = "temporal-task-orchestrator"
version = "0.1.0"
description = "Temporal Hello World"
authors = ["t"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
temporalio = "^1.25.0"
fastapi = "^0.115.0"
uvicorn = {version = "^0.34.0", extras = ["standard"]}
jinja2 = "^3.1.0"
wtforms = "^3.2.0"
email-validator = "^2.0.0"
python-multipart = "^0.0.20"
sqlalchemy = {version = "^2.0", extras = ["asyncio"]}
asyncpg = "^0.30"
passlib = {version = "^1.7", extras = ["bcrypt"]}
alembic = "^1.14"
typer = "^0.15"
pydantic-settings = "^2.0"

[tool.poetry.scripts]
taskorch = "core.cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
